--- a/DecisionTrees5.ipynb
+++ b/DecisionTrees5.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees5.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyObbMNXj42SIVuh9t7z4l22",
+      "authorship_tag": "ABX9TyOFMpxiMHcRwA0dU7oqvqyy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,10 +34,6 @@
         "id": "oxKb5zDkwRjy"
       },
       "source": [
-        "# Author: Noel Dawe <noel.dawe@gmail.com>\n",
-        "#\n",
-        "# License: BSD 3 clause\n",
-        "\n",
         "# importing necessary libraries\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -57,6 +53,52 @@
         "rng = np.random.RandomState(1)\n",
         "X = np.linspace(0, 6, 100)[:, np.newaxis]\n",
         "y = np.sin(X).ravel() + np.sin(6 * X).ravel() + rng.normal(0, 0.1, X.shape[0])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4zfc11EcyD34"
+      },
+      "source": [
+        "plt.plot(X,y)\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SOXeoVQLwySr"
+      },
+      "source": [
+        "print(\"X shape:\",X.shape)\n",
+        "print(\"y shape:\",y.shape)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yKerInB8xA-U"
+      },
+      "source": [
+        "#X"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R1ST3LKqxFxq"
+      },
+      "source": [
+        "#y"
       ],
       "execution_count": null,
       "outputs": []
