--- a/DecisionTrees1.ipynb
+++ b/DecisionTrees1.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNV/dyLPKCV72fvekYJcRNc",
+      "authorship_tag": "ABX9TyOlHG/Z1RGFGeIXCh9sW2In",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,6 +89,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7EwrEJE8sj_V"
+      },
+      "source": [
+        "Create a small dataset"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ja2uBMSiVfD_"
@@ -104,6 +113,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OnEQ12PAspmb"
+      },
+      "source": [
+        "Plot the decision tree"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "gisQvhk2ciER"
@@ -113,6 +131,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "skfdGMLAs15m"
+      },
+      "source": [
+        "Use the model to make a prediction"
+      ]
     },
     {
       "cell_type": "code",
@@ -131,11 +158,21 @@
         "id": "N0Y3HeiJe_Ho"
       },
       "source": [
-        "predict_prob is a function that predicts class probabilities of the input samples X.\n",
+        "The predict_prob is a function that predicts class probabilities of the input samples X.\n",
         "\n",
         "The predicted class probability is the fraction of samples of the same\n",
         "class in a leaf.\n",
         "\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vwH34dRLtHRe"
+      },
+      "source": [
+        "The probability is shown as:<br>\n",
+        "[prob of being in class 0, prob of being in class 1]"
       ]
     },
     {
@@ -149,6 +186,20 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vp8FFoohtX9e"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "Modify the dataset<br>\n",
+        "1. Add an additional feature to the input\n",
+        "2. Add an additional class\n",
+        "\n",
+        "What happens to the decision tree?"
+      ]
     }
   ]
 }
