--- a/DecisionTrees1.ipynb
+++ b/DecisionTrees1.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOlHG/Z1RGFGeIXCh9sW2In",
+      "authorship_tag": "ABX9TyOLKQ/4DWbuU+SJUMAkGCIL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,6 +87,42 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DCTPjQ4SvKez"
+      },
+      "source": [
+        "**Gini impurity**: measures the frequency of any element in the dataset being mislabelled when it is randomly labelled. <br>\n",
+        "Minimum gini index = 0<br>\n",
+        "> index=0 when the all the contained elements in the node are of the same unique class, meaning the node will be split again. <br>\n",
+        "\n",
+        "Maximum gini index=0.5<br>\n",
+        ">When the probability of the two classes is the same. If data is randomly labelled at a node and the probability of mislabelling is decided by one of two choices. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ykRcDzPRwm4s"
+      },
+      "source": [
+        "**Entropy**: measure of disorder if the features with the target<br>\n",
+        "The optimium split is chosen by the feature with less entropy.<br>\n",
+        "Minimum entropy = 0<br>\n",
+        "Max entropy = 1<br>\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kF5f7uaF5on-"
+      },
+      "source": [
+        "gini is slightly faster than entropy<br>\n",
+        "entropy is slightly higher performance"
+      ]
     },
     {
       "cell_type": "markdown",
