--- a/DecisionTrees1b.ipynb
+++ b/DecisionTrees1b.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1b.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOLwazuYAuV6+LgPeglQqqU",
+      "authorship_tag": "ABX9TyNYL974K4K2O1WfW1msaIln",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,20 +91,62 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_3-UJgwqY_o8"
+      },
+      "source": [
+        "Relevant Information: <br>\n",
+        "This data set was generated to model psychological\n",
+        "experimental results.  Each example is classified as having the balance scale tip to the right, tip to the left, or be balanced.  The attributes are the left weight, the left distance, the right weight, and the right distance.   <br><br>\n",
+        "The correct way to find the class is:<br>\n",
+        "  the greater of \n",
+        "\t(left-distance * left-weight) and (right-distance *\n",
+        "\tright-weight).<br>\n",
+        "  If they are equal, it is balanced."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n7yVfRsWYEPH"
+      },
+      "source": [
+        "Title                : Balance Scale Weight & Distance Database<br>\n",
+        "Number of Instances  : 625 (49 balanced, 288 left, 288 right)<br>\n",
+        "Number of Attributes : 4 (numeric) + class name = 5\n",
+        "Attribute Information:<br>\n",
+        ">Class Name (Target variable): 3<br>\n",
+        ">>L [balance scale tip to the left]<br>\n",
+        "B [balance scale be balanced]<br>\n",
+        "R [balance scale tip to the right]<br>\n",
+        "\n",
+        ">Left-Weight: 5 (1, 2, 3, 4, 5)<br>\n",
+        "Left-Distance: 5 (1, 2, 3, 4, 5)<br>\n",
+        "Right-Weight: 5 (1, 2, 3, 4, 5)<br>\n",
+        "Right-Distance: 5 (1, 2, 3, 4, 5)<br>\n",
+        "\n",
+        "Missing Attribute Values: None<br>\n",
+        "Class Distribution:<br>\n",
+        ">46.08 percent are L<br>\n",
+        "07.84 percent are B<br>\n",
+        "46.08 percent are R<br>\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "16q-k81e7V1L"
       },
       "source": [
         "# Function importing Dataset\n",
-        "\n",
         "data = pd.read_csv(\n",
         "'https://archive.ics.uci.edu/ml/machine-learning-'+\n",
         "'databases/balance-scale/balance-scale.data',\n",
         "    sep= ',', header = None)\n",
         "      \n",
         "print (\"Dataset Shape: \", data.shape)\n",
-        "print (\"Dataset: \",data.head())"
+        "data.head(10)"
       ],
       "execution_count": null,
       "outputs": []
@@ -183,14 +225,24 @@
         "id": "Crsl_qFB7iXo"
       },
       "source": [
-        "# Function to make predictions\n",
-        "def prediction(X_test, clf_object):\n",
-        "  \n",
-        "    # Predicton on test with giniIndex\n",
-        "    y_pred = clf_object.predict(X_test)\n",
-        "    print(\"Predicted values:\")\n",
-        "    print(y_pred)\n",
-        "    return y_pred"
+        "# Predictons with gini\n",
+        "y_pred_gini = clf_gini.predict(X_test)\n",
+        "#print(\"Predicted values:\")\n",
+        "#print(y_pred_gini)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LYL-xsnuWXVy"
+      },
+      "source": [
+        "# Predictons with entropy\n",
+        "y_pred_entropy = clf_entropy.predict(X_test)\n",
+        "#print(\"Predicted values:\")\n",
+        "#print(y_pred_entropy)"
       ],
       "execution_count": null,
       "outputs": []
@@ -202,15 +254,14 @@
       },
       "source": [
         "# Function to calculate accuracy\n",
-        "def cal_accuracy(y_test, y_pred):\n",
-        "      \n",
-        "    print(\"Confusion Matrix: \",\n",
+        "def accuracy_scores(y_test, y_pred):\n",
+        "    print(\"Confusion Matrix:\\n\",\n",
         "        confusion_matrix(y_test, y_pred))\n",
         "      \n",
         "    print (\"Accuracy : \",\n",
         "    accuracy_score(y_test,y_pred)*100)\n",
         "      \n",
-        "    print(\"Report : \",\n",
+        "    print(\"Report :\\n\",\n",
         "    classification_report(y_test, y_pred))"
       ],
       "execution_count": null,
@@ -224,15 +275,10 @@
       "source": [
         "# Operational Phase\n",
         "print(\"Results Using Gini Index:\")\n",
-        "      \n",
-        "# Prediction using gini\n",
-        "y_pred_gini = prediction(X_test, clf_gini)\n",
-        "cal_accuracy(y_test, y_pred_gini)\n",
+        "accuracy_scores(y_test, y_pred_gini)\n",
         "      \n",
         "print(\"Results Using Entropy:\")\n",
-        "# Prediction using entropy\n",
-        "y_pred_entropy = prediction(X_test, clf_entropy)\n",
-        "cal_accuracy(y_test, y_pred_entropy)"
+        "accuracy_scores(y_test, y_pred_entropy)"
       ],
       "execution_count": null,
       "outputs": []
