--- a/DecisionTrees1b.ipynb
+++ b/DecisionTrees1b.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1b.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNYL974K4K2O1WfW1msaIln",
+      "authorship_tag": "ABX9TyMN6vcZkTOGox6mFGlG+NRc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
         "id": "6tlx5w44RULx"
       },
       "source": [
-        ""
+        "# **Comparing gini vs entropy**"
       ]
     },
     {
