--- a/DecisionTrees2.ipynb
+++ b/DecisionTrees2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNn7Uaj22XjmbuTUz7tDcvP",
+      "authorship_tag": "ABX9TyPV/qWXR+eTjzrYjwEVA4sb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,11 +76,20 @@
         "id": "NS3nZ1FzHNga"
       },
       "source": [
-        "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation\n",
+        "from sklearn import metrics \n",
         "from sklearn import tree"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZQJZEi-Gbapp"
+      },
+      "source": [
+        "**Load the Iris datasest**"
+      ]
     },
     {
       "cell_type": "code",
@@ -140,7 +149,7 @@
         "id": "R14Fte97t3TF"
       },
       "source": [
-        "Plot the Decision Tree"
+        "**Plot the Decision Tree**"
       ]
     },
     {
@@ -155,7 +164,8 @@
         "                     filled=True, rounded=True,  \n",
         "                     special_characters=True)  \n",
         "graph = graphviz.Source(dot_data)  \n",
-        "graph "
+        "graph \n",
+        "(color is determined by the class)"
       ],
       "execution_count": null,
       "outputs": []
