--- a/DecisionTrees1b.ipynb
+++ b/DecisionTrees1b.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees1b.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMN6vcZkTOGox6mFGlG+NRc",
+      "authorship_tag": "ABX9TyOZtTYuC9+FHcGgZnk3fqZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,11 +81,13 @@
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from sklearn.metrics import confusion_matrix\n",
+        "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.tree import DecisionTreeClassifier\n",
+        "from sklearn.metrics import confusion_matrix\n",
         "from sklearn.metrics import accuracy_score\n",
-        "from sklearn.metrics import classification_report"
+        "from sklearn.metrics import classification_report\n",
+        "from sklearn.metrics import precision_score"
       ],
       "execution_count": null,
       "outputs": []
@@ -259,10 +261,12 @@
         "        confusion_matrix(y_test, y_pred))\n",
         "      \n",
         "    print (\"Accuracy : \",\n",
-        "    accuracy_score(y_test,y_pred)*100)\n",
+        "    accuracy_score(y_test,y_pred))\n",
         "      \n",
         "    print(\"Report :\\n\",\n",
-        "    classification_report(y_test, y_pred))"
+        "    classification_report(y_test, y_pred, zero_division=1))\n",
+        "    #zero division is for cases where true positive + false positive == 0\n",
+        "    #zerro_division=1 means: suppress the divide by zero warning"
       ],
       "execution_count": null,
       "outputs": []
@@ -279,6 +283,17 @@
         "      \n",
         "print(\"Results Using Entropy:\")\n",
         "accuracy_scores(y_test, y_pred_entropy)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KEznb0t5b4I6"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
