--- a/DecisionTrees2.ipynb
+++ b/DecisionTrees2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPV/qWXR+eTjzrYjwEVA4sb",
+      "authorship_tag": "ABX9TyMFZOWa0+1ZhxoXe1ED/Sxz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -165,7 +165,64 @@
         "                     special_characters=True)  \n",
         "graph = graphviz.Source(dot_data)  \n",
         "graph \n",
-        "(color is determined by the class)"
+        "#(color is determined by the class)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gYz6Gi2DxX7m"
+      },
+      "source": [
+        "**Assignment**<br>\n",
+        "Create a decision tree model for the pima-indians diabetes dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "h9cUhuZVxSwv"
+      },
+      "source": [
+        "import pandas as pd"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tBw_4W_9xBxK"
+      },
+      "source": [
+        "!git clone -l -s https://github.com/cagBRT/Machine-Learning.git cloned-repo\n",
+        "%cd cloned-repo"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mkc4CNYPwinq"
+      },
+      "source": [
+        "col_names = ['pregnant', 'glucose', 'bp', 'skin', 'insulin', 'bmi', 'pedigree', 'age', 'label']\n",
+        "# load the dataset\n",
+        "dataset = pd.read_csv('pima_indians_diabetes.csv', delimiter=',')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RPi0VQFNxkV-"
+      },
+      "source": [
+        "#Assignment\n"
       ],
       "execution_count": null,
       "outputs": []
