--- a/DecisionTrees2.ipynb
+++ b/DecisionTrees2.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees2.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMFZOWa0+1ZhxoXe1ED/Sxz",
+      "authorship_tag": "ABX9TyMIWGd0gyZmpXae/9HUO+Gq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -186,7 +186,8 @@
         "id": "h9cUhuZVxSwv"
       },
       "source": [
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split "
       ],
       "execution_count": null,
       "outputs": []
@@ -209,9 +210,30 @@
         "id": "Mkc4CNYPwinq"
       },
       "source": [
-        "col_names = ['pregnant', 'glucose', 'bp', 'skin', 'insulin', 'bmi', 'pedigree', 'age', 'label']\n",
         "# load the dataset\n",
         "dataset = pd.read_csv('pima_indians_diabetes.csv', delimiter=',')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NOh_zPl71Ofp"
+      },
+      "source": [
+        "dataset"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IEwt9em6ytPc"
+      },
+      "source": [
+        "dataset.columns"
       ],
       "execution_count": null,
       "outputs": []
@@ -223,6 +245,116 @@
       },
       "source": [
         "#Assignment\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "0YxHPGyaxtCw"
+      },
+      "source": [
+        "#@title\n",
+        "#split dataset in features and target variable\n",
+        "feature_cols = ['pregnancies', 'insulin', 'BMI', 'age','glucose','diastolic BP','diabetes pedigree']\n",
+        "X = dataset[feature_cols] # Features\n",
+        "y = dataset['class'] # Target variable\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "7JdZh1AUzX9K"
+      },
+      "source": [
+        "#@title\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.3, random_state=1) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "3bJauqruzq8v"
+      },
+      "source": [
+        "#@title\n",
+        "clf_diabetes = tree.DecisionTreeClassifier()\n",
+        "\n",
+        "# Train Decision Tree Classifer\n",
+        "clf_diabetes = clf_diabetes.fit(X_train,y_train)\n",
+        "\n",
+        "#Predict the response for test dataset\n",
+        "y_pred = clf_diabetes.predict(X_test)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "FxG1yIxoz5Pf"
+      },
+      "source": [
+        "#@title\n",
+        "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "2BO1mHvC0DOK"
+      },
+      "source": [
+        "#@title\n",
+        "tree.plot_tree(clf_diabetes)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "yR_XqWaz0KBe"
+      },
+      "source": [
+        "#@title\n",
+        "dot_data = tree.export_graphviz(clf_diabetes, out_file=None) \n",
+        "graph = graphviz.Source(dot_data) \n",
+        "graph.render(\"diabetes\") "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "cellView": "form",
+        "id": "KIwxD8Xp0Thh"
+      },
+      "source": [
+        "#@title\n",
+        "dot_data = tree.export_graphviz(clf_diabetes, out_file=None, \n",
+        "                     feature_names=feature_cols,  \n",
+        "                     class_names=['0','1'],  \n",
+        "                     filled=True, rounded=True,  \n",
+        "                     special_characters=True)  \n",
+        "graph = graphviz.Source(dot_data)  \n",
+        "graph \n",
+        "#gini=0.5 --> white color\n",
+        "#gini=smaller number, color is lighter"
       ],
       "execution_count": null,
       "outputs": []
