--- a/DecisionTrees3.ipynb
+++ b/DecisionTrees3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyOxgRBakNlR7RWOulLZZsIS",
+      "authorship_tag": "ABX9TyNDEZNVg1xi5RqjfqJg90bZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,12 +59,7 @@
         "from sklearn.tree import DecisionTreeClassifier # Import Decision Tree Classifier\n",
         "from sklearn.model_selection import train_test_split # Import train_test_split function\n",
         "from sklearn import metrics #Import scikit-learn metrics module for accuracy calculation\n",
-        "from sklearn import tree\n",
-        "import pydotplus\n",
-        "!pip install six\n",
-        "from sklearn.tree import export_graphviz\n",
-        "from sklearn.externals.six import StringIO  \n",
-        "from IPython.display import Image  "
+        "from sklearn import tree"
       ],
       "execution_count": null,
       "outputs": []
@@ -149,6 +144,28 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "AXNuh1hblagP"
+      },
+      "source": [
+        "import pydotplus"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "MZ0MNk2emEVa"
+      },
+      "source": [
+        "!pip install six"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "N-PbkzFbIPyF"
@@ -172,6 +189,11 @@
         "id": "kkS4aK3ovHc8"
       },
       "source": [
+        "from sklearn.tree import export_graphviz\n",
+        "from sklearn.externals.six import StringIO  \n",
+        "from IPython.display import Image  \n",
+        "import pydotplus\n",
+        "\n",
         "dot_data = StringIO()\n",
         "export_graphviz(diabetes_clf, out_file=dot_data,  \n",
         "                filled=True, rounded=True,\n",
@@ -244,6 +266,10 @@
         "id": "r9dwbInjnHzx"
       },
       "source": [
+        "from sklearn.externals.six import StringIO  \n",
+        "from IPython.display import Image  \n",
+        "from sklearn.tree import export_graphviz\n",
+        "import pydotplus\n",
         "dot_data = StringIO()\n",
         "export_graphviz(better_diabetes_clf, out_file=dot_data,  \n",
         "                filled=True, rounded=True,\n",
@@ -272,17 +298,6 @@
         "- Sensitive to noisy data. It can overfit noisy data.<br>\n",
         "- The small variation(or variance) in data can result in the different decision tree. This can be reduced by bagging and boosting algorithms.<br>\n",
         "- Decision trees are biased with imbalance dataset, so it is recommended that balance out the dataset before creating the decision tree.<br>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "8DKmlrpr3gWa"
-      },
-      "source": [
-        "**Assignment**<br>\n",
-        "Try different depths for the tree. <br>\n",
-        "What happens?"
       ]
     }
   ]
