--- a/DecisionTrees3.ipynb
+++ b/DecisionTrees3.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTrees3.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPIT+wR4iHFf13gzwxbKFcB",
+      "authorship_tag": "ABX9TyOwGzCWMCd5erXizvM/o3Am",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,6 +39,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yDBpxCHW7PNN"
+      },
+      "source": [
+        "Decision trees tend to overfit on data with a large number of features. Getting the right ratio of samples to number of features is important, since a tree with few samples in high dimensional space is very likely to overfit."
+      ]
     },
     {
       "cell_type": "markdown",
@@ -282,6 +291,24 @@
       "source": [
         "**Assignment**<br>\n",
         "Try different tree depths, what happens?"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3sxRmhBc7cSE"
+      },
+      "source": [
+        " Use max_depth=3 as an initial tree depth to get a feel for how the tree is fitting to your data, and then increase the depth"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "9bLy29x97fRr"
+      },
+      "source": [
+        "Remember that the **number of samples required to populate the tree doubles for each additional level** the tree grows to. Use max_depth to control the size of the tree to prevent overfitting."
       ]
     }
   ]
