--- a/DecisionTreesRegression1.ipynb
+++ b/DecisionTreesRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyNv8Vg7z9HHKA+SaxsQ+uC6",
+      "authorship_tag": "ABX9TyPBkTW2V8SKW70MXVHnUstk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +57,10 @@
       "source": [
         "from sklearn.datasets import load_diabetes\n",
         "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.ensemble import ExtraTreesRegressor"
+        "from sklearn.ensemble import ExtraTreesRegressor\n",
+        "import pandas as pd\n",
+        "from sklearn.model_selection import train_test_split \n",
+        "from sklearn import tree"
       ],
       "execution_count": null,
       "outputs": []
@@ -151,14 +154,45 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "kiQcnGS-dxGl"
+        "id": "l32fBbqYoSYF"
       },
       "source": [
-        "X, y = load_diabetes(return_X_y=True)\n",
-        "X_train, X_test, y_train, y_test = train_test_split(\n",
-        "    X, y, random_state=0)"
+        "**Pima Diabetes Dataset**<br>\n",
+        "Data Set Characteristics:<br>\n",
+        "\n",
+        "Number of Instances<br>\n",
+        "442<br>\n",
+        "\n",
+        "Number of Attributes<br>\n",
+        "First 10 columns are numeric predictive values<br>\n",
+        "\n",
+        "Target <br>\n",
+        "**Column 11 is a quantitative measure of disease progression one year after baseline**<br>\n",
+        "\n",
+        "Attribute Information<br>\n",
+        "age age in years<br>\n",
+        "sex<br>\n",
+        "bmi body mass index<br>\n",
+        "bp average blood pressure<br>\n",
+        "s1 tc, total serum cholesterol<br>\n",
+        "s2 ldl, low-density lipoproteins<br>\n",
+        "s3 hdl, high-density lipoproteins<br>\n",
+        "s4 tch, total cholesterol / HDL<br>\n",
+        "s5 ltg, possibly log of serum triglycerides level<br>\n",
+        "s6 glu, blood sugar level<br>\n",
+        "\n",
+        "Note: Each of these 10 feature variables have been mean centered and scaled by the standard deviation times n_samples (i.e. the sum of squares of each column totals 1)."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UgI1zRT7n6kp"
+      },
+      "source": [
+        "X, y = load_diabetes(return_X_y=True)"
       ],
       "execution_count": null,
       "outputs": []
@@ -166,10 +200,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CUvkXQLhdzQA"
+        "id": "mOUwYMiznbyE"
       },
       "source": [
-        "X.shape"
+        "X_train, X_test, y_train, y_test = train_test_split(\n",
+        "    X, y, random_state=0)"
       ],
       "execution_count": null,
       "outputs": []
@@ -190,11 +225,109 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "krUFbvlvqV_y"
+      },
+      "source": [
+        "y_test.shape"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "eO_YS_dBdcTl"
       },
       "source": [
-        "y_predict = reg.predict(X)\n",
-        "y_predict"
+        "y_predict = reg.predict(X_test)\n",
+        "series2=pd.Series(y_predict)\n",
+        "series1=pd.Series(y_test)\n",
+        "df=pd.DataFrame({'Test':series1, 'Prediction':series2})\n",
+        "df"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "cmvfP1D-qz2U"
+      },
+      "source": [
+        "tree.plot_tree(reg.estimators_[0],max_depth=4)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "r9Dp77OErb6q"
+      },
+      "source": [
+        "import graphviz \n",
+        "dot_data = tree.export_graphviz(reg.estimators_[0], out_file=None) \n",
+        "graph = graphviz.Source(dot_data) \n",
+        "graph.render(\"diabetes\") "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QNENjLgrtQ64"
+      },
+      "source": [
+        "age age in years<br>\n",
+        "sex<br>\n",
+        "bmi body mass index<br>\n",
+        "bp average blood pressure<br>\n",
+        "s1 tc, total serum cholesterol<br>\n",
+        "s2 ldl, low-density lipoproteins<br>\n",
+        "s3 hdl, high-density lipoproteins<br>\n",
+        "s4 tch, total cholesterol / HDL<br>\n",
+        "s5 ltg, possibly log of serum triglycerides level<br>\n",
+        "s6 glu, blood sugar level<br>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VFBph0zUswN5"
+      },
+      "source": [
+        "feature_cols = ['age', 'sex', 'BMI', 'bp','tc','ldl','hdl','tch','ltg','glu']\n",
+        "targets=['class']"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mw3F4K7xvvQo"
+      },
+      "source": [
+        "tree_num = 0\n",
+        "filename=\"file\"+str(tree_num)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HWIA8H1PsCnI"
+      },
+      "source": [
+        "dot_data = tree.export_graphviz(reg.estimators_[tree_num],\n",
+        "                     feature_names=feature_cols,  \n",
+        "                     class_names=targets,  \n",
+        "                     filled=True, rounded=True,  \n",
+        "                     special_characters=True)  \n",
+        "graph = graphviz.Source(dot_data)  \n",
+        "graph"
       ],
       "execution_count": null,
       "outputs": []
