--- a/DecisionTreesRegression1.ipynb
+++ b/DecisionTreesRegression1.ipynb
@@ -6,7 +6,7 @@
       "name": "DecisionTreesRegression1.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPBkTW2V8SKW70MXVHnUstk",
+      "authorship_tag": "ABX9TyNbqFVYEsUb9ivmciktOcnm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "N37-xfjbxnhO"
+      },
+      "source": [
+        "# **Using Decision Trees for Regresssion**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "T93njG6ZRzsR"
       },
       "source": [
@@ -50,6 +59,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3--GEhA1x40I"
+      },
+      "source": [
+        "Import the necessary libraries"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ubhxI5bORjKx"
@@ -66,6 +84,24 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FAPnvi33yK1n"
+      },
+      "source": [
+        "https://www.saedsayad.com/decision_tree_reg.htm"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q-DyfDhPyOmY"
+      },
+      "source": [
+        "**Regresssion outcome using Trees**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "0PEV-S9PSnM2"
@@ -76,6 +112,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NQEY1gw7yWG0"
+      },
+      "source": [
+        "Break the dataset intto individual branches"
+      ]
     },
     {
       "cell_type": "code",
@@ -89,6 +134,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sZgry4tSydUh"
+      },
+      "source": [
+        "Determine the Standard Deviation for each branch"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bZTdqffhXtV4"
@@ -100,6 +154,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "IoKKxyVrylQ6"
+      },
+      "source": [
+        "Select the largest SDR "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "bjEx3fyOY2Dk"
@@ -109,6 +172,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kdRPBKuzytf6"
+      },
+      "source": [
+        "Repeat for each branch"
+      ]
     },
     {
       "cell_type": "code",
@@ -187,6 +259,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-ekpIfQPyyst"
+      },
+      "source": [
+        "**Load the dataset**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "UgI1zRT7n6kp"
@@ -196,6 +277,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MhJRZWIly1iv"
+      },
+      "source": [
+        "**Split the data iinto train and test sets**"
+      ]
     },
     {
       "cell_type": "code",
@@ -208,6 +298,15 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zDQwz4wCy6uy"
+      },
+      "source": [
+        "**Use the ExtraTreesRegressor model to find the best fit**"
+      ]
     },
     {
       "cell_type": "code",
@@ -234,6 +333,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CctIC1CnzGFT"
+      },
+      "source": [
+        "**Note that the dataset has labels that correspond to the progression of diabetes in the previous year.**"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "eO_YS_dBdcTl"
@@ -247,6 +355,27 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "psKr_HsUziVS"
+      },
+      "source": [
+        "print(\"number of trees used: \",len(reg.estimators_))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bMQba-5bzSSn"
+      },
+      "source": [
+        "We used a collection of tree estimators to find the best fit for the data. <br>\n",
+        "So to plot a tree, we have to select one of them"
+      ]
     },
     {
       "cell_type": "code",
@@ -309,8 +438,7 @@
         "id": "Mw3F4K7xvvQo"
       },
       "source": [
-        "tree_num = 0\n",
-        "filename=\"file\"+str(tree_num)"
+        "tree_num = 0"
       ],
       "execution_count": null,
       "outputs": []
